--- a/ShuffleboardApplication/Views/Game/Index.cshtml
+++ b/ShuffleboardApplication/Views/Game/Index.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Games</h2>
 
+<!--Hello this is a test to git hub to see if it works-->
 <p>
     @Html.ActionLink("Submit a Game", "Create")
 </p>
