this is a commit to shuffle app from logan workstation

--- a/ShuffleboardApplication/Views/Game/Index.cshtml
+++ b/ShuffleboardApplication/Views/Game/Index.cshtml
@@ -65,9 +65,10 @@
             </td>
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.GameID }) |
-                @Html.ActionLink("Details", "Index", new { id = item.GameID }) |
-                @Html.ActionLink("Delete", "Index", new { id = item.GameID })
+
+                @Html.ActionLink("Details", "Index", new { id = item.GameID }) 
+                
+                @Html.ActionLink("Delete", "Delete", "Game", new { id = item.GameID }, null)
             </td>
         </tr>
 
