Formatting of Games Index Page

--- a/ShuffleboardApplication/Views/Game/Index.cshtml
+++ b/ShuffleboardApplication/Views/Game/Index.cshtml
@@ -17,12 +17,8 @@
 -->
 
 
-<table class="table">
+<table class="table" id="gamesTable">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.GameID)
-        </th>
-
         <th>
             @Html.DisplayNameFor(model => model.Date)
         </th>
@@ -30,46 +26,37 @@
             @Html.DisplayNameFor(model => model.P1)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.P1Score)
-        </th>
-
-        <th>
             @Html.DisplayNameFor(model => model.P2)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.P2Score)
+            @Html.DisplayName("Score")
         </th>
 
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.GameID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.P1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.P1Score)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.P2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.P2Score)
-            </td>
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Date)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.P1)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.P2)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.P1Score) - @Html.DisplayFor(modelItem => item.P2Score)
+        </td>
+        
 
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.GameID }) |
-                @Html.ActionLink("Details", "Index", new { id = item.GameID }) |
-                @Html.ActionLink("Delete", "Index", new { id = item.GameID })
-            </td>
-        </tr>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.GameID }) |
+            @Html.ActionLink("Details", "Index", new { id = item.GameID }) |
+            @Html.ActionLink("Delete", "Index", new { id = item.GameID })
+        </td>
+    </tr>
 
     }
 
