Added a Trash Can

--- a/ShuffleboardApplication/Views/Game/Index.cshtml
+++ b/ShuffleboardApplication/Views/Game/Index.cshtml
@@ -53,9 +53,11 @@
             @Html.DisplayFor(modelItem => item.P1Score) - @Html.DisplayFor(modelItem => item.P2Score)
         </td>
         <td>
-            @Html.ActionLink("Details", "Index", new { id = item.GameID })
-
             @Html.ActionLink("Delete", "Delete", "Game", new { id = item.GameID }, null)
+            <a href="@Url.Action("Delete", "Game", new { id = item.GameID}, null)" class="btn btn-danger">
+                <i class="fas fa-trash"></i>
+            </a>
+
         </td>
     </tr>
     }
