--- a/ShuffleboardApplication/Views/Shared/_Layout.cshtml
+++ b/ShuffleboardApplication/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="~/Content/bootstrap.css"></script>
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-light" style="background-color: #abcdef;">
+    <nav class="navbar fixed-top navbar-light" style="background-color: rgb(0, 205, 102); padding: 0px;">
         <a class="navbar-brand" href="/Game/Index">Shuffleboard Application</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
