--- a/ShuffleboardApplication/Views/Game/Edit.cshtml
+++ b/ShuffleboardApplication/Views/Game/Edit.cshtml
@@ -14,7 +14,7 @@
         <h4>Game Edit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger"})
-        @Html.HiddenFor(model => model.ID)
+        @Html.HiddenFor(model => model.GameID)
 
         <div class="form-group">
             @Html.LabelFor(model => model.P1, htmlAttributes: new { @class = "control-label col-md-2"})
