Added a touranment model, Controller and View

--- a/ShuffleboardApplication/Views/Shared/_Layout.cshtml
+++ b/ShuffleboardApplication/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     @Html.ActionLink("View Leaderboard", "Index", "Player", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
+                    @Html.ActionLink("View Tournaments", "Index", "Tournament", null, new { @class = "nav-link"})
                 </li>
                 <li class="nav-item">
 
