more changes by Logan

--- a/ShuffleboardApplication/Views/Home/Index.cshtml
+++ b/ShuffleboardApplication/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>Shuffleboard    </h1>
+    <p class="lead">This app was built using .NET with an Azure backend database. The app keeps track of the Wipro shuffleboard p</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
