more updates from Logan

--- a/ShuffleboardApplication/Views/Home/Index.cshtml
+++ b/ShuffleboardApplication/Views/Home/Index.cshtml
@@ -4,28 +4,25 @@
 
 <div class="jumbotron">
     <h1>Shuffleboard    </h1>
-    <p class="lead">This app was built using .NET with an Azure backend database. The app keeps track of the Wipro shuffleboard p</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p class="lead">This app was built using .NET with an Azure backend database. The app keeps track of the Shuffleboard play at the Wipro Plano Office.</p>
+    
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>How to play</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            A game of shuffleboard consists of alternating puck throws between players with the furthest pucks counting as points. 
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.ventureshuffleboard.com/play-shuffleboard/">How to play &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Cool Trick Shots</h2>
+        <iframe width="340" height="250" src="https://www.youtube.com/embed/BlfFKVGQbi8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Authors</h2>
+        <p>This app was built and implemented by Kaushik Mandiga & Logan Watkins with contributions by Harshil Patel & Brian Nyugen.</p>
+        <p><a class="btn btn-default" href="https://github.com/kmandiga/ShuffleboardApplication">Git Link &raquo;</a></p>
     </div>
 </div>
