--- a/ShuffleboardApplication/Content/Site.css
+++ b/ShuffleboardApplication/Content/Site.css
@@ -9,6 +9,34 @@
     padding-right: 15px;
 }
 
+.navbar-light a.navbar-brand{
+    color: white;
+}
+.navbar-brand {
+    margin-right: 20px;
+    margin-left: 20px;
+    color: white;
+}
+
+.
+
+button.navbar-toggler{
+    
+    margin-right:20px;
+}
+#navToggleTagId{
+    color:white;
+}
+
+#greenButton {
+    background-color: background-color: rgb(0, 205, 102);
+    color: white;
+    margin-right: 20px;
+}
+span.navbar-toggler-icon {
+    color: white;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -27,16 +55,28 @@ textarea {
     background: rgb(0, 255, 127);
     color: white;
 }
+#navColor:hover{
+    color:black;
+}
 .nav-link:hover {
-    background: rgb(0, 255, 127);
+    color:black;
     width: 100%;
 }
 .navbar-nav .nav-item .nav-link {
     color: white;
 }
-.nav-link {
+.navbar-nav .nav-item .nav-link:hover {
+    color: black;
+}
+
+
+
+.nav-item {
+    padding-left: 20px;
     
-    width:100%;
+}
+.nav-item:hover{
+    color:black;
 }
 .navbar fixed-top navbar-light{
     margin:0px;
