--- a/ShuffleboardApplication/Views/Shared/_Layout.cshtml
+++ b/ShuffleboardApplication/Views/Shared/_Layout.cshtml
@@ -9,28 +9,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <script src="~/Content/bootstrap.css"></script>
 </head>
-<body>
-    <nav class="navbar fixed-top navbar-light" style="background-color: rgb(0, 205, 102); padding-top: 10px; padding-bottom:5px; padding-right: 0px; padding-left: 0px; ">
-        <a class="navbar-brand" href="/Game/Index">Shuffleboard Application</a>
+<body style="padding-top: 100px;">
+    <nav class="navbar fixed-top navbar-dark" style="background-color: rgb(0, 205, 102); color: white; 20px; padding-bottom:10px; padding-right: 0px; padding-left: 0px; ">
+        <a id ="navColor" class="navbar-brand" href="/Home/Index">Shuffleboard Application</a>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+       
+            <span  id="greenButton"  class = "navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars fa-2x"></i></span>
+        
+        <div class="collapse navbar-collapse" id="navbarNav" >
             <ul class="navbar-nav">
+                
                 <li class="nav-item">
-                    <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
-                    @Html.ActionLink("Submit a Game", "Create", "Game", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Games", "Index", "Game", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    <!--<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
-                    @Html.ActionLink("Create a Player", "Create", "Player", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Players", "Index", "Player", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("View Leaderboard", "Index", "Player", null, new { @class = "nav-link" })
-                </li>
-                <li class="nav-item">
-                    @Html.ActionLink("View Tournaments", "Index", "Tournament", null, new { @class = "nav-link" })
+                    @Html.ActionLink("Tournaments", "Index", "Tournament", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
 
