--- a/ShuffleboardApplication/Views/Tournament/Create.cshtml
+++ b/ShuffleboardApplication/Views/Tournament/Create.cshtml
@@ -4,3 +4,21 @@
 }
 
 <h2>Create</h2>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken();
+
+    <div class="form-horizontal">
+        <h4>Tournament</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger"})
+        <div class="form-group">
+            <div class="col-md-10">
+
+
+
+
+            </div>
+        </div>
+    </div>
+}
