Added validation for duplicate players

--- a/ShuffleboardApplication/Views/Home/Index.cshtml
+++ b/ShuffleboardApplication/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     </div>
     <div class="col-md-4">
         <h2>Authors</h2>
-        <p>This app was built and implemented by Kaushik Mandiga & Logan Watkins with contributions by Harshil Patel & Brian Nyugen.</p>
+        <p>This app was built and implemented by Kaushik Mandiga, Logan Watkins, Brian Nguyen, Harshil Patel, Greg Burslem</p>
         <p><a class="btn btn-default" href="https://github.com/kmandiga/ShuffleboardApplication">Git Link &raquo;</a></p>
     </div>
 </div>
