--- a/ShuffleboardApplication/Views/Shared/_Layout.cshtml
+++ b/ShuffleboardApplication/Views/Shared/_Layout.cshtml
@@ -6,19 +6,27 @@
     <title>@ViewData["Title"] - Shuffleboard Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <script src="~/Content/bootstrap.css"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+
+
+
+
+    <link rel="stylesheet" href="css/bootstrap-multiselect.css" type="text/css" />
+
+
 </head>
 <body style="padding-top: 100px;">
     <nav class="navbar fixed-top navbar-dark" style="background-color: rgb(0, 205, 102); color: white; 20px; padding-bottom:10px; padding-right: 0px; padding-left: 0px; ">
-        <a id ="navColor" class="navbar-brand" href="/Home/Index">Shuffleboard Application</a>
+        <a id="navColor" class="navbar-brand" href="/Home/Index">Shuffleboard Application</a>
 
-       
-            <span  id="greenButton"  class = "navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars fa-2x"></i></span>
-        
-        <div class="collapse navbar-collapse" id="navbarNav" >
+
+        <span id="greenButton" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars fa-2x"></i></span>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                
+
                 <li class="nav-item">
                     @Html.ActionLink("Games", "Index", "Game", null, new { @class = "nav-link" })
                 </li>
@@ -45,6 +53,9 @@
     @Scripts.Render("~/bundles/jquery")
 
     @Scripts.Render("~/bundles/bootstrap")
+    <script type="text/javascript" src="~/Scripts/multiselect.js"></script>
+    <script type="text/javascript" src="js/bootstrap-multiselect.js"></script>
+    <script type="text/javascript" src="~/Scripts/multi.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
