--- a/ShuffleboardApplication/Views/Tournament/Create.cshtml
+++ b/ShuffleboardApplication/Views/Tournament/Create.cshtml
@@ -14,11 +14,82 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger"})
         <div class="form-group">
             <div class="col-md-10">
+                @Html.TextBox("TournamentName", null, new { @class = "form-control", @placeholder = "Tournament Name" })
+                <hr />
+                Number of Players in Tournament
 
+                <div ng-app="">
+                    <select ng-model="name">
+                        <option value="4">4</option>
+                        <option value="8">8</option>
+                        <option value="16">16</option>
+                        <option value="32">32</option>
+                    </select>
+
+
+
+                    <div ng-if="name == 4">
+                        <div class="form-group">
+                            <div class="col-md-10">
+                                <p></p>
+                                <!-- change the width of player score editor for perhaps by changing width in css or something-->
+                                @*@Html.TextBox("P1", null, new { @class = "form-control", @placeholder = "Player 1 Username" })*@
+                                @Html.DropDownList("P1", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 1", new { @class = "form-control" })
+                                <p></p>
+                                @*@Html.TextBox("P2", null, new { @class = "form-control", @placeholder = "Player 2 Username" })*@
+                                @Html.DropDownList("P2", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 2", new { @class = "form-control" })
+
+                                <p></p>
+                                @Html.DropDownList("P3", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 3", new { @class = "form-control" })
+
+                                <p></p>
+                                @*@Html.TextBox("P4", null, new { @class = "form-control", @placeholder = "Player 2 Username" })*@
+                                @Html.DropDownList("P4", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 4", new { @class = "form-control" })
+                            </div>
+                        </div>
+                    </div>
+
+                    <div ng-if="name == 8">
+                        <div class="form-group">
+                            <div class="col-md-10">
+
+                                <!-- change the width of player score editor for perhaps by changing width in css or something-->
+                                @*@Html.TextBox("P1", null, new { @class = "form-control", @placeholder = "Player 1 Username" })*@
+                                @Html.DropDownList("P1", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 1", new { @class = "form-control" })
+                                <p></p>
+                                @*@Html.TextBox("P2", null, new { @class = "form-control", @placeholder = "Player 2 Username" })*@
+                                @Html.DropDownList("P2", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 2", new { @class = "form-control" })
+
+                                <p></p>
+                                @Html.DropDownList("P3", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 3", new { @class = "form-control" })
+
+                                <p></p>
+                                @*@Html.TextBox("P4", null, new { @class = "form-control", @placeholder = "Player 2 Username" })*@
+                                @Html.DropDownList("P4", (IEnumerable<SelectListItem>)ViewBag.PlayerList, "Select Player 4", new { @class = "form-control" })
+
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div ng-if="name == 16">
+                        <h1>16</h1>
+                        <hr>
+                    </div>
+
+                    <div ng-if="name == 32">
+                        <h1>32</h1>
+                        <hr>
+                    </div>
+
+                </div>
+
+                
 
 
 
             </div>
         </div>
     </div>
-}
+                    }
