--- a/ShuffleboardApplication/Views/Tournament/Details.cshtml
+++ b/ShuffleboardApplication/Views/Tournament/Details.cshtml
@@ -1,17 +1,51 @@
-﻿@{
-    Layout = null;
+﻿@model ShuffleboardApplication.Models.Tournament
+
+@{
+    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Details</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    
-    </div>
-</body>
-</html>
+<div>
+    <h4>Tournament</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.DateCreated)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DateCreated)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.numPlayers)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.numPlayers)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.TournamentName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TournamentName)
+        </dd>
+
+    </dl>
+</div>
+
+<div class="display-4 text-center">Players</div>
+<table>
+    @foreach(var p in Model.Players)
+    {
+        <tr><td>@p.Username</td></tr>
+    }
+</table>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.TournamentID }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
