Not finished. Working on the Games Edit

--- a/ShuffleboardApplication/Views/Game/Index.cshtml
+++ b/ShuffleboardApplication/Views/Game/Index.cshtml
@@ -60,6 +60,9 @@
             <a href="@Url.Action("Delete", "Game", new { id = item.GameID}, null)" class="btn btn-danger">
                 <i class="fas fa-trash"></i>
             </a>
+            <a href="@Url.Action("Edit", "Game", new { id = item.GameID}, null)" class="btn btn-danger">
+                <i class="fas fa-trash"></i>
+            </a>
 
         </td>
     </tr>
