--- a/ShuffleboardApplication/Views/Game/Edit.cshtml
+++ b/ShuffleboardApplication/Views/Game/Edit.cshtml
@@ -1,51 +1,39 @@
 ﻿@model ShuffleboardApplication.Models.Game
 
-@{ 
+@{
     ViewBag.Title = "Edit";
 }
 
 <h2>Edit</h2>
-
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
+    @Html.AntiForgeryToken();
 
-    <div class = "form-horizontal">
-        <h4>Game Edit</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger"})
-        @Html.HiddenFor(model => model.GameID)
+<div class="form-horizontal">
+    <h4>Game</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        <div class="col-md-10">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.P1, htmlAttributes: new { @class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.P1, new { htmlAttributes = new { @class = "form-control"} })
-                @Html.ValidationMessageFor(model => model.P1, "", new { @class = "text-danger"})
+
+            <div> @Model.P1</div>
+            <p></p>
+            @Html.EditorFor(Model => Model.P1Score, new { htmlAttributes = new { @class = "form-control", @placeholder = "P1 Score" } })
+            <div> @Model.P2</div>
+            <p></p>
+            @Html.EditorFor(Model => Model.P2Score, new { htmlAttributes = new { @class = "form-control", @placeholder = "P2 Score" } })
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Done" class="btn btn-default" />
+                </div>
             </div>
-        </div>
 
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.P2, htmlAttributes: new { @class = "form-control"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.P2, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.P2, "", new { @class = "text-danger"})
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+
+
         </div>
     </div>
-
-}
-
-<div>
-    @Html.ActionLink("Back to Games", "Index")
 </div>
-
-@section Scripts{
-    @Scripts.Render("~/bundles/jqueryval")
-    }
+}
